# python-acoustics

./: .buildinfo  .deploy-from-travis.sh  .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  ambisonics.html  atmosphere.html  bands.html  building.html  cepstrum.html  criterion.html  decibel.html  default.nix  descriptors.html  develop.nix  directivity.html  doppler.html  flake.nix  generator.html  genindex.html  imaging.html  index.html  objects.inv  octave.html  power.html  py-modindex.html  pylintrc  pyproject.toml  quantity.html  reference.html  reflection.html  release.nix  requirements.txt  room.html  search.html  searchindex.js  setup.cfg  (+7 more)
_images/: inheritance-0af78d7eb1cf0a347d9f38a9eed9771873085b78.png.map  inheritance-1bb82ba490a590c29bbfec7d75f4dc81f079861c.png.map  inheritance-58619c3686848f56787cca4b66a428de8ab16970.png.map  inheritance-7dad6ec660c4af20bc53b7c239fc5973c80bd358.png.map  inheritance-93b8544a3b2dfe605d0b1c5c4ef6493022b58354.png.map  inheritance-d2be19a9d969b2973e24e888f656386ecf2b4c2a.png.map  inheritance-d41f74eb2f2bcefbea5bb4a3f8133eb8ccdccb37.png.map  inheritance-dbae0d2b6d768fe51c8ea565a54c10ec6573b413.png.map  inheritance-e6694c457fe1afd0ae0893312492b73cf885ebf9.png.map  inheritance-ebb22b23581e9db0430766b9e250061c14249690.png.map
_modules/: acoustics.html  index.html  numpy.html
_sources/: bands.rst.txt  building.rst.txt  cepstrum.rst.txt  criterion.txt  decibel.rst.txt  descriptors.txt  directivity.txt  doppler.txt  generator.txt  index.txt  octave.txt  power.txt  reference.txt  reflection.txt  room.txt  signal.txt  turbulence.rst.txt  turbulence.txt  weighting.rst.txt  weighting.txt
_static/: documentation_options.js
acoustics/: __init__.py  _signal.c  _signal.py  _signal.pyx  _turbulence.py  aio.py  ambisonics.py  atmosphere.py  bands.py  barrier_attenuation.py  building.py  cepstrum.py  criterion.py  decibel.py  descriptors.py  directivity.py  doppler.py  dsp.py  generator.py  imaging.py  octave.py  power.py  quantity.py  reflection.py  room.py  signal.py  signals.py  spectrum.py  turbulence.py  utils.py  weighting.py  weighting_noaa.py
data/: absorption_coefficient.csv
docs/: Makefile  ambisonics.rst  atmosphere.rst  bands.rst  barrier_attenuation.rst  building.rst  conf.py  criterion.rst  descriptors.rst  directivity.rst  doppler.rst  generator.rst  imaging.rst  index.rst  make.bat  octave.rst  quantity.rst  reference.rst  reflection.rst  requirements.txt  room.rst  signal.rst  signals.rst  standards.rst  turbulence.rst  utils.rst
examples/: directivity.ipynb  example_barrier_attenuation.py  example_signal.py  frequencies_class_modification.ipynb  octave.py  salomons_figure_I3.py  salomons_figure_J1.py  signal_class.ipynb  turbulence.py
tests/: get_data_path.py  test__signal.py  test_aio.py  test_atmosphere.py  test_bands.py  (+16 more)
(+207 files in other folders)
