[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "acoustics"
version = "0.2.6"
authors = [
  { name="Python Acoustics" },
]
description = "Acoustics module for Python."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy >= 1.8",
    "scipy >= 0.16",
    "matplotlib",
    "six >= 1.4.1",
    "pandas >= 0.15",
    "tabulate",
]
[project.optional-dependencies]
documentation = [
    "sphinx"
]
fast_fft = [
    "pyFFTW"
]
[project.license]
file = "LICENSE"
[project.urls]
"Homepage" = "https://github.com/python-acoustics/python-acoustics"
"Bug Tracker" = "https://github.com/python-acoustics/python-acoustics/issues"

[tool.flit.sdist]
include = ["tests/"]
