[metadata]
name = acoustics
version = 0.1.2
description = Acoustics module for Python.
long_description = file: README.md
license = BSD 3-Clause License
author = Python Acoustics

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    acoustics = acoustics

setup_requires =
    numpy
    cython
    setuptools >= 30.3.0
install_requires =
    numpy >= 1.8
    scipy >= 0.16
    matplotlib
    six >= 1.4.1
    cython
    pandas >= 0.15
    tabulate
tests_require =
    pytest

[options.package_data]
acoustics = data/* , tests/*.py

[options.packages.find]
exclude =
    tests

[options.extras_require]
documentation = sphinx
jit = numba
fast_fft = pyFFTW

[tools:pytest]
norecursedirs = build .eggs .tox
