[metadata]
name = acoustics
version = 0.2.0post0
description = Acoustics module for Python.
long_description = file: README.md
license = BSD 3-Clause License
author = Python Acoustics

[options]
zip_safe = True
include_package_data = True
packages = find:
package_dir =
    acoustics = acoustics

python_requires = >=3.6.*
setup_requires =
    setuptools >= 30.3.0
install_requires =
    numpy >= 1.8
    scipy >= 0.16
    matplotlib
    six >= 1.4.1
    pandas >= 0.15
    tabulate
tests_require =
    pytest

[options.package_data]
acoustics = data/* , tests/*.py

[options.packages.find]
exclude =
    tests

[options.extras_require]
documentation = sphinx
jit = numba
fast_fft = pyFFTW

[tools:pytest]
norecursedirs = build .eggs .tox

[yapf]
based_on_style = pep8
allow_multiline_lambdas = true
coalesce_brackets = true
column_limit = 120
indent_dictionary_value = true
split_before_named_assigns = false
split_penalty_for_added_line_split = 0
split_before_logical_operator = false
split_all_comma_separated_values = false
split_before_expression_after_opening_paren = true
split_arguments_when_comma_terminated = true